[package]
authors = ["Julia DeMille <me@jdemille.com>", "Nathaniel Ringo <remexre@gmail.com>"]
description = "A crate for parsing and using JSON pointers, as specified in RFC 6901."
documentation = "https://docs.rs/json-pointer"
homepage = "https://github.com/remexre/json-pointer"
license = "MIT"
name = "json-pointer"
readme = "README.md"
repository = "https://github.com/remexre/json-pointer"
version = "0.3.2"
edition = "2018"

[badges]

[badges.travis-ci]
branch = "master"
repository = "remexre/json-pointer"

[dependencies]
serde_json = "^1.0.57"

[dev-dependencies]
lazy_static = "^1.4.0"
quickcheck = "^0.9.2"
regex = "1"
