[package]
authors = ["Jeremy Rubin <jeremy.l.rubin@gmail.com>", "Julia DeMille <me@jdemille.com>", "Nathaniel Ringo <remexre@gmail.com>"]
description = "A crate for parsing and using JSON pointers, as specified in RFC 6901."
documentation = "https://docs.rs/json-pointer"
homepage = "https://github.com/JeremyRubin/json-pointer"
license = "MIT"
name = "json-ptr"
readme = "README.md"
repository = "https://github.com/JeremyRubin/json-pointer"
version = "0.3.5"

[badges]
gitlab = { repository = "jmap-rs/json-pointer" }

[dependencies]
serde_json = ">=1.0.25"

[dev-dependencies]
lazy_static = "^1.4.0"
quickcheck = "^0.9.2"
regex = "1"
